docs(capability-studio): freeze verifier archive kernel